# SAWH_TEAs

./: .gitignore  tea_workbook_lib.py  tea_workbook_plots.py
sawh_bayesopt/: README.md  pyproject.toml
sawh_bayesopt/configs/: default_bayesopt.yaml
sawh_bayesopt/docs/: SHERLOCK_VERIFY_RUNBOOK.md  design_notes.md
sawh_bayesopt/scripts/: run_bayesopt.py
sawh_bayesopt/scripts/diagnostics/: baseline_random_search.py  gp_diagnostics.py  loop_diagnostics.py
sawh_bayesopt/src/sawh_bayesopt/: __init__.py  acquisition.py  bayesopt.py  design_space.py  evaluator.py  reporting.py  sites.py  surrogate.py  verification.py
sawh_bayesopt/tests/: test_acquisition.py  test_bayesopt_loop_synthetic.py  test_design_space.py  test_evaluator_cache.py  test_evaluator_penalty.py  test_integration_real_model.py  test_surrogate.py
solar_lumped/: .gitignore  README.md  pyproject.toml
solar_lumped/configs/: default_solar.yaml
solar_lumped/diaz-marin-et-al._re-creation/reference/: SI.tex  diazmarin_et_al_2024.tex
solar_lumped/diaz-marin-et-al._re-creation/reference/figure3/: 3b_0.csv  3b_1.csv  3b_4.csv  3b_8.csv  3c.csv  3e.csv
solar_lumped/diaz-marin-et-al._re-creation/scripts/: chamber_rh_schedule.py  figure3.py  figure5.py
solar_lumped/docs/: governing_eq.tex  gpu_sweep_handoff.md  sherlock_param_sweep.tex
solar_lumped/gpu_sweep/: FINDINGS.md  GPU_PRIMER.md  SHERLOCK_GPU_RUNBOOK.md  benchmark_gpu_batch_size.py  jax_daily_cycle.py  jax_physics.py  run_gpu_sweep.py  sbatch_gpu_sweep_array.sh  sbatch_gpu_sweep_array_case2.sh  sbatch_gpu_sweep_array_case3.sh  sbatch_gpu_sweep_smoke.sh  sbatch_gpu_sweep_smoke_case2.sh  sbatch_gpu_sweep_smoke_case3.sh  validate_batched_pipeline.py  validate_desorption_integration_tsit5.py  validate_monthly_pipeline.py  validate_rhs.py
solar_lumped/matlab/: PlotDefaults_Slides.m  PrintFigure.m
solar_lumped/matlab/recreation/: diaz_marin_figure3.m  diaz_marin_figure5.m  diaz_marin_uptake_eq5.m  export_recreation_figure.m  licl_equilibrium_brine_fraction.m  licl_water_activity.m  load_ref_csv.m  overlay_ref.m  pause_for_figure.m  recreation_paths.m  run_all_recreation_figures.m  setup_recreation.m  wilson_figure2.m  wilson_figure3.m  wilson_figure4.m
solar_lumped/parameter_sweeps/: parameter_sweep.csv
solar_lumped/scripts/: compare_annual_vs_mean_day.py  estimate_npv_by_country.py  export_recreation_matlab_data.py  full_oat_sweep.py  gpu_sweep_analysis.py  gpu_sweep_case_comparison.py  grid_param_sweep.py  lcow_full_global_map.py  lcow_plot_maps.py  lcow_random_global_map.py  lcow_site_breakdown.py  npv_heatmap.py  parameter_sweep.py  plot_annual_simulation.py  plot_npv_by_country.py  prefetch_weather.py  run_annual_simulation.py  run_solar_sim.py  salt_choice_comparison.py  tornado_plot.py
solar_lumped/src/solar_lumped/: __init__.py
solar_lumped/tests/: test_brine_equilibrium.py  test_chamber_rh_schedule.py  test_conde2004.py  test_governing_equations.py  test_mof_sorbent.py  test_salt_properties.py  test_site_feasibility.py  test_solar_sim.py  test_weather_climate.py
solar_lumped/tornado_plots/: tornado_plot.table.csv
solar_lumped/wilson-et-al._re-creation/reference/: wilson_et_al_2025.tex
solar_lumped/wilson-et-al._re-creation/scripts/: figure2.py  figure2_generate.py  figure2_plot.py  figure3.py  figure4.py  plot_weather.py
waste-heat_cycle_lumped/: .gitignore  README.md  pyproject.toml
waste-heat_cycle_lumped/configs/: default_waste_heat.yaml
waste-heat_cycle_lumped/parameter_sweeps/: README.md  parameter_sweep.csv
waste-heat_cycle_lumped/scripts/: diagnose_absorption_kinetics.py  npv_heatmap.py  parameter_sweep.py  plot_energy_balance.py  run_waste_heat_cycle_sim.py
waste-heat_cycle_lumped/tests/: test_governing_equations.py  test_parasitic_electricity.py  test_specific_energy.py  test_waste_heat_sim.py
waste-heat_lumped/: README.md  pyproject.toml
waste-heat_lumped/.cache/weather/: openmeteo_cache.sqlite
waste-heat_lumped/configs/: default_waste_heat.yaml
waste-heat_lumped/docs/: governing_eq.tex
waste-heat_lumped/scripts/: export_recreation_matlab_data.py  lcow_full_global_map.py  lcow_plot_maps.py  lcow_random_global_map.py  lcow_site_breakdown.py  npv_heatmap.py  parameter_sweep.py  run_waste_heat_sim.py  tornado_plot.py
waste-heat_lumped/src/waste_heat_lumped/: __init__.py
waste-heat_lumped/tests/: conftest.py  test_brine_equilibrium.py  test_parasitic_electricity.py  test_salt_properties.py  test_waste_heat_sim.py
waste-heat_lumped/tornado_plots/: tornado_plot.table.csv
(+212 files in other folders)
